compiling_error.txt
/Users/tianxin/Desktop/Data Structure/HW6/main.cpp:13:7: error: use of undeclared identifier 'std'
      std::cerr << "Error in number of arguments" << std::endl;
      ^
/Users/tianxin/Desktop/Data Structure/HW6/main.cpp:13:54: error: use of undeclared identifier 'std'
      std::cerr << "Error in number of arguments" << std::endl;
                                                     ^
/Users/tianxin/Desktop/Data Structure/HW6/main.cpp:18:3: error: use of undeclared identifier 'std'
  std::ifstream input_str(argv[1])
  ^
3 errors generated.
